cluster/authelia/authelia.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    kubernetes.io/ingress.class: internal
    nginx.ingress.kubernetes.io/enable-global-auth: 'false'
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # https://www.authelia.com/docs/security/measures.html
      add_header Cache-Control "no-store";
      add_header Pragma "no-cache";
      add_header X-Frame-Options "SAMEORIGIN";
      add_header X-XSS-Protection "1; mode=block";
spec:
  rules:
    - host: gate.sko.ai
      http:
        paths:
          - backend:
              service:
                name: authelia
                port: 
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  namespace: authelia
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: authelia
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  namespace: authelia
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authelia
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: authelia
    spec:
      enableServiceLinks: false
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - authelia
              topologyKey: kubernetes.io/hostname
      securityContext:
        runAsUser: 4000
        runAsGroup: 4000
        fsGroup: 4000
      containers:
        - image: authelia/authelia:4.35.4
          name: authelia
          startupProbe:
            failureThreshold: 6
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /api/health
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          configMap:
            name: authelia-config
