cluster/authelia/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia-ext
  namespace: authelia
spec:
  ingressClassName: haproxy-external
  rules:
  - host: gate-ext.sko.ai
    http:
      paths:
      - backend:
          service:
            name: authelia
            port:
              number: 8080
        path: /
        pathType: Prefix
